<resources>
    <string name="app_name">每日一文</string>
    <string name="til_hintUserName">用户名(1–20)</string>
    <string name="til_hintUserPassword">密码(1–20且含字母和数字)</string>
    <string name="bt_textLog">登录</string>
    <string name="bt_textToResign">没有账号？立即注册</string>
    <string name="bt_textResign">注册</string>
    <string name="todo">TODO</string>
    <string name="bt_hintSearch">搜索</string>
    <string name="tv_textPoetryTitle">标题</string>
    <string name="tv_textPoetryAuthor">作者</string>
    <string name="tv_textPoetryContent">内容</string>
    <string name="tv_textPoetry">诗词</string>
    <string name="tv_textNews">简报</string>
    <string name="tv_textNewsTime">今日简报</string>
    <string name="tv_textProse">散文</string>
    <string name="tv_textDailyNews">知乎日报</string>
    <string name="menu_titleLogout">注销</string>
    <string name="tv_textDividingLine1">-------简单阅读</string>
    <string name="tv_textDeepRead">搜书</string>
    <string name="tv_textDividingLine2">-------深度阅读</string>
    <string name="menu_titlePersonalCenter">个人中心</string>
    <string name="tv_textAccountUserName">用户名</string>
    <string name="tv_textAccountUserPassword">密码</string>
    <string name="tv_textSetPortrait">设置头像</string>
    <string name="bt_hintSetAccount">修改账号资料</string>
    <string name="bt_hintSet">修改</string>
</resources>